[tool.poetry]
name = "point-e"
version = "0.1.0"
description = ""
authors = ["adwaver <adwaver4157@gmail.com>"]
readme = "README.md"
packages = [{include = "point_e"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pillow = "^9.5.0"
torch = "^2.0.1"
tqdm = "^4.65.0"
numpy = "^1.24.3"
requests = "^2.31.0"
matplotlib = "^3.7.1"
clip = {git = "https://github.com/openai/CLIP.git"}
torchvision = "^0.15.2"
scipy = "^1.10.1"



[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
